# Visual-Novel-Setup-Helper

./: .gitignore  README.md  build_exe.py  expression_sheet_maker.py  gemini_sprite_pipeline.py  gsp_constants.py  outfit_prompts.csv  pyproject.toml  requirements.txt  sprite_creator.spec  start-mac.command  start-windows.bat
gemini_sprite_pipeline copy/: __init__.py
gemini_sprite_pipeline copy/api/: __init__.py  background_removal_legacy.py  gemini_client.py  prompt_builders.py
gemini_sprite_pipeline copy/models/: __init__.py
gemini_sprite_pipeline copy/processing/: __init__.py  character_finalizer.py
gemini_sprite_pipeline copy/ui/: tk_common.py
gemini_sprite_pipeline/api/: prompt_builders.py
gemini_sprite_pipeline/processing/: expression_generator.py  image_utils.py  pose_processor.py
gemini_sprite_pipeline/ui/: dialogs.py  review_windows.py
src/: __init__.py  main.py  sprite_launcher.py
src/renpy_scaffolder/: __init__.py  scaffolder.py  sdk_downloader.py
src/sprite_creator/: __init__.py  __main__.py  config.py  constants.py  expression_sheets.py  logging_utils.py  pipeline.py  run.py
src/sprite_creator/api/: __init__.py  exceptions.py  gemini_client.py  prompt_builders.py
src/sprite_creator/core/: __init__.py  models.py
src/sprite_creator/data/: adult_man_athletic.csv  adult_man_casual.csv  adult_man_formal.csv  adult_man_swimsuit.csv  adult_man_underwear.csv  adult_man_uniform.csv  adult_woman_athletic.csv  adult_woman_casual.csv  adult_woman_formal.csv  adult_woman_swimsuit.csv  adult_woman_underwear.csv  adult_woman_uniform.csv  fatherly_man_athletic.csv  fatherly_man_casual.csv  fatherly_man_formal.csv  fatherly_man_swimsuit.csv  fatherly_man_underwear.csv  fatherly_man_uniform.csv  motherly_woman_athletic.csv  motherly_woman_casual.csv  motherly_woman_formal.csv  motherly_woman_swimsuit.csv  motherly_woman_underwear.csv  motherly_woman_uniform.csv  names.csv  outfit_prompts.csv.backup  split_outfit_csv.py  young_man_athletic.csv  young_man_casual.csv  young_man_formal.csv  young_man_swimsuit.csv  young_man_underwear.csv  young_man_uniform.csv  young_woman_athletic.csv  young_woman_casual.csv  young_woman_formal.csv  young_woman_swimsuit.csv  young_woman_underwear.csv  young_woman_uniform.csv
src/sprite_creator/data/reference_sprites/scale_references/cornelia/: character.yml
src/sprite_creator/data/reference_sprites/scale_references/maki/: character.yml
src/sprite_creator/data/reference_sprites/scale_references/sojiro/: character.yml
src/sprite_creator/processing/: __init__.py  character_finalizer.py  expression_generator.py  image_utils.py  pose_processor.py
src/sprite_creator/tester/: __main__.py
src/sprite_creator/tester/templates/: body.py  char_sprites.py  character.py  effects.rpy  filtered_image.py
src/sprite_creator/tools/: __init__.py
src/sprite_creator/tools/tester/: __init__.py  sdk_utils.py
src/sprite_creator/ui/: __init__.py  api_setup.py  dialogs.py  disclaimer.py  full_wizard.py  launcher.py  review_windows.py  tk_common.py  welcome.py
src/sprite_creator/ui/screens/: __init__.py  base.py  crop_step.py  expression_steps.py  finalization_steps.py  fusion_step.py  generation_steps.py  outfit_steps.py  settings_step.py  setup_steps.py
src/vn_writer/: __init__.py  editor.py
(+1 files in other folders)
